[tool.poetry]
name = "polucion-misiones"
version = "0.1.0"
description = "Scripts to download and manage polution data to Misiones, Argentina"
authors = ["Felipe Sodré M. Barros"]
readme = "README.md"
packages = [{include = "polucion_misiones"}]

[tool.poetry.dependencies]
python = "^3.11"
cdsapi = "^0.6.1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
